--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 tracker.js
 tests/UI/processed-ui-screenshots
+/vue/dist/demo.html
+/vue/dist/*.common.js
+/vue/dist/*.map
+/vue/dist/*.development.*
